Use Apache Http Client

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,5 +9,11 @@ remote-configuration {
     # use basic authentication
     url = ""
     url = ${?REMOTECONF_HTTP_URL}
+
+    # Basic authentication
+    basic-auth {
+      username = ${?REMOTECONF_HTTP_BASICAUTH_USERNAME}
+      password = ${?REMOTECONF_HTTP_BASICAUTH_PASSWORD}
+    }
   }
 }
